# synapse-notes

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: mkdocs.yml
notes/: models.py  serializers.py  services.py  urls.py  views.py
notes/migrations/: 0001_initial.py
synapsenotes/: asgi.py  settings.py  urls.py  wsgi.py
